--- a/strings/src/main/res/values-es/strings.xml
+++ b/strings/src/main/res/values-es/strings.xml
@@ -418,7 +418,7 @@
   <!--Description of how to add offline layers to the project-->
   <string name="offline_layer_dialog_description">Seleccione la capa sin conexión para usar en todos los mapas de este proyecto. Puede agregar opciones a la lista seleccionando un archivo MBTiles de su dispositivo y también eliminar capas existentes de la lista.</string>
   <!--Text of button user can press to get help when setting up Offline Layers-->
-  <string name="get_help_with_offline_layers">Obtenga más información sobre cómo agregar MBTiles.</string>
+  <!--<string name="get_help_with_offline_layers">Obtenga más información sobre cómo agregar MBTiles.</string>-->
   <!--Text for button that lets the user select a offline layer on their device to add-->
   <string name="add_layer">Agregar capas</string>
   <!--Text for button that lets the user delete a offline layer-->
