--- a/strings/src/main/res/values-pt/strings.xml
+++ b/strings/src/main/res/values-pt/strings.xml
@@ -411,7 +411,7 @@
   <string name="offline_layer_dialog_title">Selecionar camada offline</string>
   <!--Description of how to add offline layers to the project-->
   <!--Text of button user can press to get help when setting up Offline Layers-->
-  <string name="get_help_with_offline_layers">Saber mais sobre adicionar MBTiles.</string>
+  <!--<string name="get_help_with_offline_layers">Saber mais sobre adicionar MBTiles.</string>-->
   <!--Text for button that lets the user select a offline layer on their device to add-->
   <string name="add_layer">Adicionar camadas</string>
   <!--Text for button that lets the user delete a offline layer-->
